---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    type t : int\n    var k : int\n\n    % Type operand prevents checking of type compatibility\n    var _tt := t shr t\n    var _tk := t shr k\n    var _kt := k shr t\n    "
---
"t"@"src/main.t:10..11" [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of int
"k"@"src/main.t:26..27" [ConstVar(Var, No)]: int
"_tt"@"src/main.t:102..105" [ConstVar(Var, No)]: nat
"_tk"@"src/main.t:125..128" [ConstVar(Var, No)]: nat
"_kt"@"src/main.t:148..151" [ConstVar(Var, No)]: nat
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:109..110: cannot use `t` as an expression
| error for src/main.t:109..110: `t` is a reference to a type, not a variable
| note for src/main.t:10..11: `t` declared here
error at src/main.t:115..116: cannot use `t` as an expression
| error for src/main.t:115..116: `t` is a reference to a type, not a variable
| note for src/main.t:10..11: `t` declared here
error at src/main.t:132..133: cannot use `t` as an expression
| error for src/main.t:132..133: `t` is a reference to a type, not a variable
| note for src/main.t:10..11: `t` declared here
error at src/main.t:161..162: cannot use `t` as an expression
| error for src/main.t:161..162: `t` is a reference to a type, not a variable
| note for src/main.t:10..11: `t` declared here
